--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to My Salesforce Project</h1>
+      <h1>Welcome to My Salesforce Project1</h1>
     </header>
     <main>
       <section>
